terraform/extras/ecr_ecs/asg.tf
# Get the latest ECS AMI
data "aws_ami" "latest_ecs" {
  most_recent = true

  filter {
    name   = "name"
    values = ["*amazon-ecs-optimized"]
  }

  filter {
    name   = "virtualization-type"
    values = ["hvm"]
  }

  owners = ["591542846629"] # AWS
}

resource "aws_security_group" "instance_sg" {
  description = "controls direct access to application instances"
  vpc_id      = "${data.terraform_remote_state.vpc.vpc_id}"
  name        = "application-instances-sg"

  ingress {
    protocol    = "tcp"
    from_port   = 32768
    to_port     = 65535
    description = "Access from ALB"

    security_groups = [
      "${module.alb_sg.this_security_group_id}",
    ]
  }

  ingress {
    protocol    = "tcp"
    from_port   = "636"
    to_port     = "636"
    cidr_blocks = ["0.0.0.0/0"]
    description = "Allowed LDAP to instances"
  }

  ingress {
    protocol    = "tcp"
    from_port   = "22"
    to_port     = "22"
    cidr_blocks = ["${data.terraform_remote_state.vpc.vpc_cidr}"]
    description = "Allow ssh into clusters"
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_launch_configuration" "ecs-launch-configuration" {
  name                 = "ecs-launch-configuration"
  image_id             = "${data.aws_ami.latest_ecs.id}"
  instance_type        = "t2.small"
  spot_price           = "0.0070"
  iam_instance_profile = "${aws_iam_instance_profile.ecs-instance-profile.id}"
  security_groups      = ["${aws_security_group.instance_sg.id}"]

  lifecycle {
    create_before_destroy = true
  }

  user_data = "${file("cloud-init.conf")}"
}

resource "aws_autoscaling_group" "ecs-autoscaling-group" {
  name                 = "ecs-autoscaling-group"
  max_size             = "${4}"
  min_size             = "${2}"
  desired_capacity     = "${2}"
  vpc_zone_identifier  = ["${data.terraform_remote_state.vpc.private_subnet_a}", "${data.terraform_remote_state.vpc.private_subnet_b}"]
  launch_configuration = "${aws_launch_configuration.ecs-launch-configuration.name}"
  health_check_type    = "ELB"
}
